# HyperIMECursor

./: .editorconfig  .gitignore  CMakeLists.txt  Readme.md
.run/: HyperIMECursor.run.xml  HyperIMEIndicator.run.xml
src/: CProcessMonitorETW.cpp  CProcessMonitorETW.hpp  CTaskSchedulerHelper.cpp  CTaskSchedulerHelper.hpp  app.cpp  app.hpp  app.qrc  cmnUtils.cpp  cmnUtils.hpp  imeborderindicator.cpp  imeborderindicator.hpp  imewindowindicator.cpp  imewindowindicator.hpp  main.cpp  main.hpp  resource.h  settings.cpp  settings.hpp  stdafx.h  version.rc.in
src/res/: app.manifest
src/ui/: about.cpp  about.hpp  about.ui  indicator.cpp  indicator.hpp  indicator.ui  indicator_caret.cpp  indicator_caret.hpp  indicator_popup.cpp  indicator_popup.hpp  opt.cpp  opt.hpp  opt.ui
